--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
+        <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à fédérer les développeurs web de la partie Est de la France !">
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
@@ -13,13 +13,13 @@
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <!--icon-->
+        <!--website icons-->
         <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
-            <!--logo + navigation menu-->
+            <!--start logo + navigation menu-->
             <nav class="navbar navbar-expand-lg navbar-dark header-nav">
                 <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,15 +40,16 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="contact.html">Rejoignez-nous !</a>
+                            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <!--end logo + navigation menu-->
         </header>
-        <!--main section-->
+        <!--start main content-->
         <main>
-            <!--slider-->
+            <!--start slider-->
             <section class="slider">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -74,7 +75,7 @@
                   </div>
             </section>
             <!--end slider-->
-            <!--introudction-->
+            <!--start introduction-->
             <section class="intro py-5">
                 <div class="container">
                     <h1> 1ère Association Fictive des Codeurs de l'Est en France !</h1>
@@ -86,6 +87,7 @@
                 </div>
             </section>
             <!--end introduction-->
+            <!--start reassurance block-->
             <section class="reassurance py-5">
                 <div class="container">
                     <div class="row">
@@ -107,7 +109,9 @@
                     </div>
                 </div>
             </section>
+            <!--end reassurance block-->
          </main>
+         <!--start illustration + text block-->
          <section class="py-5">
             <div class="container">
                 <div class="row">
@@ -118,6 +122,7 @@
                         <h2 class="p-title-2">Défis développement web mensuel</h2>
                         <div class="divider"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione sit perferendis laborum quisquam quaerat eos officiis, autem ab doloremque sunt rerum similique repellat eaque praesentium fugit amet vitae magnam!</p>
+                        <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
                     </div> 
                 </div>
             </div>
@@ -127,6 +132,7 @@
                         <h2 class="p-title-2">Entraide entre développeurs web</h2>
                         <div class="divider"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae, architecto et maxime eum aliquid suscipit modi ipsam quisquam assumenda autem quo consequatur, repellendus corrupti quas molestias, similique cum tempore.</p>
+                        <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
                     </div>
                     <div class="col-sm my-auto">
                         <img class="illustration" src="img/entraide-developpeurs-web.png" alt="Entraide entre développeurs web"/>
@@ -134,8 +140,9 @@
                 </div>
             </div>
         </section>
+        <!--end illustration + text block-->
      </main>
-         <!--end main section-->
+         <!--end main content-->
          <!--footer-->
          <footer>
             <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
