--- a/a-propos.html
+++ b/a-propos.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
+        <meta name="description" content="Découvrez l'association EASTCODERS' ! Une communauté de plus de 5000 développeurs web originaires de la partie Est de la France.">
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
@@ -13,13 +13,13 @@
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <!--icon-->
+        <!--website icons-->
         <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
-            <!--logo + navigation menu-->
+            <!--start logo + navigation menu-->
             <nav class="navbar navbar-expand-lg navbar-dark header-nav">
                 <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="a-propos.html">L'association</a>
                         </li>
                         <li class="nav-item">
@@ -40,27 +40,32 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light " href="contact.html">Rejoignez-nous !</a>
+                            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <!--end logo + navigation menu-->
         </header>
+    <!--start main content-->
     <main>
+        <!--start title intro-->
         <section class="main-title">
             <div class="container intro py-5">
                 <h1>L'association EASTCODERS'</h1>
-                <!--breadcrumb start-->
+                <!--start breadcrumb-->
                 <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
                     <ul>
                       <li><a href="index.html">Accueil</a></li>
                       <li><span aria-current="page">L'association</span></li>
                     </ul>
                   </nav>
-                  <!--breadcrumb end-->
+                  <!--end breadcrumb-->
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis molestiae! Officia, reprehenderit. Optio, error harum.</p>
             </div>
         </section>
+        <!--end title intro-->
+        <!--start illustration + text block-->
         <section>
             <div class="container">
                 <div class="row py-5">
@@ -74,6 +79,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sequi, libero quia, harum odio minima quas placeat expedita, optio sunt qui. Officiis corrupti placeat ullam est velit sequi sapiente voluptatem.</p>
                         <h3>Valoriser les bienfaits de notre passion pour le code</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque vel vitae dolorem sed! Cum consequatur quaerat sint aliquid itaque nulla cumque ipsum et eum non nesciunt, tempore dolorum repudiandae incidunt.</p>
+                        <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
                     </div>
                 </div>
             </div>
@@ -88,6 +94,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit, officia fugiat tempora quaerat beatae totam aperiam nisi eum voluptate et quod ad. Sed eius quas, reiciendis exercitationem rerum repudiandae?</p>
                         <h3>Groupes d'échanges</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet temporibus sed aliquid suscipit quo sapiente explicabo, consequatur repellat libero modi ex fugiat et labore expedita eius rem assumenda tempore nemo?</p>
+                        <a class="btn btn-dark my-5" href="contact.html">Nous rejoindre !</a>
                     </div>
                     <div class="col-sm">
                         <img class="illustration" src="img/groupe-échange-developpement-web.png" alt="Groupe d'échanges développement web"/>
@@ -95,10 +102,12 @@
                 </div>
             </div>
         </section>
+        <!--end illustration + text block-->
     </main>
+    <!--end main content-->
+    <!--footer-->
     <footer>
         <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
      </footer>
 </body>
-
 </html>
