--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
+        <meta name="description" content="Contactez dès maintenant EASTCODERS' pour soutenir l'association ou vous inscrire à nos événements !">
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
@@ -13,13 +13,13 @@
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <!--icon-->
+        <!--website icons-->
         <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
-            <!--logo + navigation menu-->
+            <!--start logo + navigation menu-->
             <nav class="navbar navbar-expand-lg navbar-dark header-nav">
                 <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
@@ -36,31 +36,34 @@
                         <li class="nav-item">
                             <a class="nav-link" href="evenements.html">Nos événements</a> 
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
+                            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <!--end logo + navigation menu-->
         </header>
+    <!--start main content-->
     <main>
         <section class="main-title">
             <div class="container intro py-5">
                 <h1>Nous contacter</h1>
-                <!--breadcrumb start-->
+                <!--start breadcrumb-->
                 <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
                   <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><span aria-current="page">Contact</span></li>
                   </ul>
                 </nav>
-                <!--breadcrumb end-->
+                <!--end breadcrumb-->
                 <p>Vous souhaitez <b>rejoindre EASTCODERS'</b>, nous soutenir ou <b>participer aux <a href="evenements.html">événements</a></b> ?<br> Contactez-nous ! Grâce à notre team de développeurs super efficaces, vous obtiendrez une réponse en moins de 48h !</p>
             </div>
         </section>
+        <!--start 2 columns-->
         <section>
             <div class="container py-5">
                 <div class="row">
@@ -68,9 +71,10 @@
                         <h2>Coordonnées</h2>
                         <div class="divider"></div>
                         <ul>
-                            <li>EASTCODERS'<br> 1 Rue des Champs Élysées 75000 Paris</li>
-                            <li>Téléphone : (+33)6.37.29.88.95</li>
-                            <li>Réseaux sociaux :
+                            <li><i class="fa-solid fa-building"></i> EASTCODERS'<br> </li>
+                            <li><i class="fa-solid fa-location-dot"></i> 1 Rue des Champs Élysées 75000 Paris</li>
+                            <li><i class="fa-solid fa-phone"></i> Téléphone : (+33)6.37.29.88.95</li>
+                            <li><i class="fa-solid fa-hashtag"></i> Réseaux sociaux :
                               <ul class="social-icons">
                                 <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
@@ -109,7 +113,7 @@
                               </div>
                             </div>
                             <div class="form-row">
-                              <div class="col-md-12"">
+                              <div class="col-md-12">
                                 <label for="exampleFormControlTextarea1">Message</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
@@ -128,8 +132,9 @@
                 </div>
             </div>
         </section>
+        <!--end 2 columns-->
     </main>
-    <!--end main section-->
+    <!--end main content-->
     <!--footer-->
     <footer>
       <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
