--- a/a-propos.html
+++ b/a-propos.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Découvrez l'association EASTCODERS' ! Une communauté de plus de 5000 développeurs web originaires de la partie Est de la France.">
-        <!--scripts-->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
-        <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
-        <!--stylesheets-->
-        <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <!--website icons-->
-        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    </head>
-    <body>
-        <header>
-            <!--start logo + navigation menu-->
-            <nav class="navbar navbar-expand-lg navbar-dark header-nav">
-                <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="a-propos.html">L'association</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="evenements.html">Nos événements</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <!--end logo + navigation menu-->
-        </header>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>L'association - Eastcoders'</title>
+    <meta name="description"
+        content="Découvrez l'association EASTCODERS' ! Une communauté de plus de 5000 développeurs web originaires de la partie Est de la France.">
+    <!--scripts-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+    <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
+    <!--stylesheets-->
+    <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
+    <!--website icons-->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+</head>
+
+<body>
+    <header>
+        <!--start logo + navigation menu-->
+        <nav class="navbar navbar-expand-lg navbar-dark header-nav">
+            <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="a-propos.html">L'association</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="evenements.html">Nos événements</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i>
+                            Rejoignez-nous !</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--end logo + navigation menu-->
+    </header>
     <!--start main content-->
     <main>
         <!--start title intro-->
@@ -56,12 +64,14 @@
                 <!--start breadcrumb-->
                 <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
                     <ul>
-                      <li><a href="index.html">Accueil</a></li>
-                      <li><span aria-current="page">L'association</span></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><span aria-current="page">L'association</span></li>
                     </ul>
-                  </nav>
-                  <!--end breadcrumb-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis molestiae! Officia, reprehenderit. Optio, error harum.</p>
+                </nav>
+                <!--end breadcrumb-->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum
+                    repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis
+                    molestiae! Officia, reprehenderit. Optio, error harum.</p>
             </div>
         </section>
         <!--end title intro-->
@@ -70,15 +80,19 @@
             <div class="container">
                 <div class="row py-5">
                     <div class="col-sm">
-                        <img class="illustration" src="img/est-france.png" alt="Est de la France"/>
+                        <img class="illustration" src="img/est-france.png" alt="Est de la France" />
                     </div>
                     <div class="col-sm">
                         <h2>Objectifs de l'association</h2>
                         <div class="divider"></div>
                         <h3>Fédérer les développeurs de l'Est de la France</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sequi, libero quia, harum odio minima quas placeat expedita, optio sunt qui. Officiis corrupti placeat ullam est velit sequi sapiente voluptatem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sequi, libero quia, harum odio
+                            minima quas placeat expedita, optio sunt qui. Officiis corrupti placeat ullam est velit
+                            sequi sapiente voluptatem.</p>
                         <h3>Valoriser les bienfaits de notre passion pour le code</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque vel vitae dolorem sed! Cum consequatur quaerat sint aliquid itaque nulla cumque ipsum et eum non nesciunt, tempore dolorum repudiandae incidunt.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque vel vitae dolorem sed! Cum
+                            consequatur quaerat sint aliquid itaque nulla cumque ipsum et eum non nesciunt, tempore
+                            dolorum repudiandae incidunt.</p>
                         <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
                     </div>
                 </div>
@@ -86,18 +100,23 @@
         </section>
         <section>
             <div class="container">
-                <div class="row py-5">
+                <div class="row py-5" id="txt-left-desktop">
+                    <div class="col-sm">
+                        <img class="illustration" src="img/groupe-échange-developpement-web.png"
+                            alt="Groupe d'échanges développement web" />
+                    </div>
                     <div class="col-sm">
                         <h2>Les moyens d'actions</h2>
                         <div class="divider"></div>
                         <h3>Événements défis codes mensuels</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit, officia fugiat tempora quaerat beatae totam aperiam nisi eum voluptate et quod ad. Sed eius quas, reiciendis exercitationem rerum repudiandae?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit, officia fugiat tempora
+                            quaerat beatae totam aperiam nisi eum voluptate et quod ad. Sed eius quas, reiciendis
+                            exercitationem rerum repudiandae?</p>
                         <h3>Groupes d'échanges</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet temporibus sed aliquid suscipit quo sapiente explicabo, consequatur repellat libero modi ex fugiat et labore expedita eius rem assumenda tempore nemo?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet temporibus sed aliquid
+                            suscipit quo sapiente explicabo, consequatur repellat libero modi ex fugiat et labore
+                            expedita eius rem assumenda tempore nemo?</p>
                         <a class="btn btn-dark my-5" href="contact.html">Nous rejoindre !</a>
-                    </div>
-                    <div class="col-sm">
-                        <img class="illustration" src="img/groupe-échange-developpement-web.png" alt="Groupe d'échanges développement web"/>
                     </div>
                 </div>
             </div>
@@ -107,7 +126,12 @@
     <!--end main content-->
     <!--footer-->
     <footer>
-        <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
-     </footer>
+        <p class="pt-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
+        <ul class="social-icons" id="footer-icons">
+            <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
