--- a/contact.html
+++ b/contact.html
@@ -1,143 +1,159 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Contactez dès maintenant EASTCODERS' pour soutenir l'association ou vous inscrire à nos événements !">
-        <!--scripts-->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
-        <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
-        <!--stylesheets-->
-        <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
-        <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <!--website icons-->
-        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    </head>
-    <body>
-        <header>
-            <!--start logo + navigation menu-->
-            <nav class="navbar navbar-expand-lg navbar-dark header-nav">
-                <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="a-propos.html">L'association</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="evenements.html">Nos événements</a> 
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
-                        </li>
-                    </ul>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contactez-nous ! - Eastcoders'</title>
+  <meta name="description"
+    content="Contactez dès maintenant EASTCODERS' pour soutenir l'association ou vous inscrire à nos événements !">
+  <!--scripts-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+  <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
+  <!--stylesheets-->
+  <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+  <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
+  <!--website icons-->
+  <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+</head>
+
+<body>
+  <header>
+    <!--start logo + navigation menu-->
+    <nav class="navbar navbar-expand-lg navbar-dark header-nav">
+      <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders" /></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="a-propos.html">L'association</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="evenements.html">Nos événements</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-light cta" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous
+              !</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--end logo + navigation menu-->
+  </header>
+  <!--start main content-->
+  <main>
+    <section class="main-title">
+      <div class="container intro py-5">
+        <h1>Nous contacter</h1>
+        <!--start breadcrumb-->
+        <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
+          <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><span aria-current="page">Contact</span></li>
+          </ul>
+        </nav>
+        <!--end breadcrumb-->
+        <p>Vous souhaitez <b>rejoindre EASTCODERS'</b>, nous soutenir ou <b>participer aux <a
+              href="evenements.html">événements</a></b> ?<br> Contactez-nous ! Grâce à notre team de développeurs super
+          efficaces, vous obtiendrez une réponse en moins de 48h !</p>
+      </div>
+    </section>
+    <!--start 2 columns-->
+    <section>
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-sm-4 contact-details">
+            <h2>Coordonnées</h2>
+            <div class="divider"></div>
+            <ul>
+              <li><i class="fa-solid fa-building"></i> EASTCODERS'<br> </li>
+              <li><i class="fa-solid fa-location-dot"></i> 1 Rue des Champs Élysées 75000 Paris</li>
+              <li><i class="fa-solid fa-phone"></i> Téléphone : (+33)6.37.29.88.95</li>
+              <li><i class="fa-solid fa-hashtag"></i> Réseaux sociaux :
+                <ul class="social-icons">
+                  <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-8">
+            <h2>Envoyer un mail</h2>
+            <div class="divider"></div>
+            <form>
+              <div class="form-row">
+                <div class="col-md-6">
+                  <label for="validationDefault02">Nom</label>
+                  <input type="text" class="form-control" id="validationDefault02" value="Durand" required>
                 </div>
-            </nav>
-            <!--end logo + navigation menu-->
-        </header>
-    <!--start main content-->
-    <main>
-        <section class="main-title">
-            <div class="container intro py-5">
-                <h1>Nous contacter</h1>
-                <!--start breadcrumb-->
-                <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
-                  <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><span aria-current="page">Contact</span></li>
-                  </ul>
-                </nav>
-                <!--end breadcrumb-->
-                <p>Vous souhaitez <b>rejoindre EASTCODERS'</b>, nous soutenir ou <b>participer aux <a href="evenements.html">événements</a></b> ?<br> Contactez-nous ! Grâce à notre team de développeurs super efficaces, vous obtiendrez une réponse en moins de 48h !</p>
-            </div>
-        </section>
-        <!--start 2 columns-->
-        <section>
-            <div class="container py-5">
-                <div class="row">
-                    <div class="col-sm-4 contact-details">
-                        <h2>Coordonnées</h2>
-                        <div class="divider"></div>
-                        <ul>
-                            <li><i class="fa-solid fa-building"></i> EASTCODERS'<br> </li>
-                            <li><i class="fa-solid fa-location-dot"></i> 1 Rue des Champs Élysées 75000 Paris</li>
-                            <li><i class="fa-solid fa-phone"></i> Téléphone : (+33)6.37.29.88.95</li>
-                            <li><i class="fa-solid fa-hashtag"></i> Réseaux sociaux :
-                              <ul class="social-icons">
-                                <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                              </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-8">
-                        <h2>Envoyer un mail</h2>
-                        <div class="divider"></div>
-                        <form>
-                            <div class="form-row">
-                              <div class="col-md-6">
-                                <label for="validationDefault02">Nom</label>
-                                <input type="text" class="form-control" id="validationDefault02" value="Durand" required>
-                              </div>
-                              <div class="col-md-6">
-                                <label for="validationDefault01">Prénom</label>
-                                <input type="text" class="form-control" id="validationDefault01" value="Marc" required>
-                              </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col-md-12">
-                                    <label for="exampleFormControlInput1">Adresse email</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="marcdurand@gmail.com">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                              <div class="col-md-6">
-                                <label for="validationDefault03">Ville</label>
-                                <input type="text" class="form-control" id="validationDefault03" required>
-                              </div>
-                              <div class="col-md-6">
-                                <label for="validationDefault05">Code Postal</label>
-                                <input type="text" class="form-control" id="validationDefault05" required>
-                              </div>
-                            </div>
-                            <div class="form-row">
-                              <div class="col-md-12">
-                                <label for="exampleFormControlTextarea1">Message</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                                <label class="form-check-label" for="invalidCheck2">
-                                  J'accepte de recevoir des informations à propos des événements organisés par l'association
-                                </label>
-                              </div>
-                            </div>
-                            <button class="btn btn-dark" type="submit">Envoyer</button>
-                          </form>
-                    </div>
+                <div class="col-md-6">
+                  <label for="validationDefault01">Prénom</label>
+                  <input type="text" class="form-control" id="validationDefault01" value="Marc" required>
                 </div>
-            </div>
-        </section>
-        <!--end 2 columns-->
-    </main>
-    <!--end main content-->
-    <!--footer-->
-    <footer>
-      <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
-    </footer>
+              </div>
+              <div class="form-row">
+                <div class="col-md-12">
+                  <label for="exampleFormControlInput1">Adresse email</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1"
+                    placeholder="marcdurand@gmail.com">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-md-6">
+                  <label for="validationDefault03">Ville</label>
+                  <input type="text" class="form-control" id="validationDefault03" required>
+                </div>
+                <div class="col-md-6">
+                  <label for="validationDefault05">Code Postal</label>
+                  <input type="text" class="form-control" id="validationDefault05" required>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-md-12">
+                  <label for="exampleFormControlTextarea1">Message</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                  <label class="form-check-label" for="invalidCheck2">
+                    J'accepte de recevoir des informations à propos des événements organisés par l'association
+                  </label>
+                </div>
+              </div>
+              <button class="btn btn-dark" type="submit">Envoyer</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--end 2 columns-->
+  </main>
+  <!--end main content-->
+  <!--footer-->
+  <footer>
+    <p class="pt-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
+    <ul class="social-icons" id="footer-icons">
+      <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+    </ul>
+  </footer>
 </body>
+
 </html>
