Correction de code + ajout sticky sidebar période événements

--- a/evenements.html
+++ b/evenements.html
@@ -17,7 +17,7 @@
     <!--stylesheets-->
     <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--website icons-->
     <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -77,8 +77,8 @@
         <div class="container py-5">
             <div class="row diary">
                 <!--start period selection-->
-                <div class="col-12 col-md-3 text-center">
-                    <section id="sidebar">
+                <div class="col-12 col-md-3 text-center sidebar">
+                    <section>
                         <h2 class="py-4">Période</h2>
                         <aside>
                             <ul class="month-list">
@@ -286,6 +286,6 @@
             <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
+</body>
 
 </html>
-</body>
