--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <!--stylesheets-->
   <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <!--website icons-->
   <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
