--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--stylesheets-->
     <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--website icons-->
     <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -123,42 +123,43 @@
             </div>
         </section>
         <!--end reassurance block-->
-    </main>
-    <!--start illustration + text block-->
-    <section class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm my-auto">
-                    <img class="illustration" src="img/developpement-web.png" alt="Développement web" />
-                </div>
-                <div class="col-sm my-auto">
-                    <h2 class="p-title-2">Défis développement web mensuel</h2>
-                    <div class="divider"></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione sit perferendis laborum
-                        quisquam quaerat eos officiis, autem ab doloremque sunt rerum similique repellat eaque
-                        praesentium fugit amet vitae magnam!</p>
-                    <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row" id="txt-left-desktop">
-                <div class="col-sm my-auto">
-                    <img class="illustration" src="img/entraide-developpeurs-web.png"
-                        alt="Entraide entre développeurs web" />
-                </div>
-                <div class="col-sm my-auto">
-                    <h2 class="p-title-2">Entraide entre développeurs web</h2>
-                    <div class="divider"></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae, architecto et maxime eum
-                        aliquid suscipit modi ipsam quisquam assumenda autem quo consequatur, repellendus corrupti quas
-                        molestias, similique cum tempore.</p>
-                    <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
+        <!--start illustration + text block-->
+        <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm my-auto">
+                        <img class="illustration" src="img/developpement-web.png" alt="Développement web" />
+                    </div>
+                    <div class="col-sm my-auto">
+                        <h2 class="p-title-2">Défis développement web mensuel</h2>
+                        <div class="divider"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione sit perferendis laborum
+                            quisquam quaerat eos officiis, autem ab doloremque sunt rerum similique repellat eaque
+                            praesentium fugit amet vitae magnam!</p>
+                        <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!--end illustration + text block-->
+            <div class="container">
+                <div class="row txt-left-desktop">
+                    <div class="col-sm my-auto">
+                        <img class="illustration" src="img/entraide-developpeurs-web.png"
+                            alt="Entraide entre développeurs web" />
+                    </div>
+                    <div class="col-sm my-auto">
+                        <h2 class="p-title-2">Entraide entre développeurs web</h2>
+                        <div class="divider"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae, architecto et maxime
+                            eum
+                            aliquid suscipit modi ipsam quisquam assumenda autem quo consequatur, repellendus corrupti
+                            quas
+                            molestias, similique cum tempore.</p>
+                        <a class="btn btn-dark my-5" href="evenements.html">Participer à nos événements !</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end illustration + text block-->
     </main>
     <!--end main content-->
     <!--footer-->
