--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-md-6">
                   <label for="validationDefault05">Code Postal</label>
-                  <input type="text" class="form-control" id="validationDefault05" required>
+                  <input type="text" class="form-control" pattern="\d{5}" id="validationDefault05" required>
                 </div>
               </div>
               <div class="form-row">
